<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Main">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/day_less"
        android:gravity="center"
        android:onClick="dayLess"
        android:background="@android:color/transparent"
        android:id="@+id/dayLess"
        style="@android:style/Widget.Button.Small" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/dayLess"
        android:layout_toRightOf="@id/dayLess"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:textAlignment="center"
        android:id="@+id/date"
        android:onClick="selectDate"
        android:clickable="true"
        android:layout_above="@+id/date"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/date"
        android:layout_alignBaseline="@id/dayLess"
        android:drawableLeft="@drawable/day_more"
        android:gravity="center"
        android:onClick="dayMore"
        android:background="@android:color/transparent"
        android:id="@+id/dayMore"
        style="@android:style/Widget.Button.Small" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dayLess"
        android:text="@string/date_info"
        android:textColor="@android:color/darker_gray"
        android:id="@+id/dateInfo"
        android:autoText="false" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_below="@id/dateInfo"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/wheals_title"
        android:id="@+id/titleWheals"
        android:textStyle="bold"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:id="@+id/whealsContainer"
        android:layout_below="@id/titleWheals">

        <Button
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/uas_level_0"
            android:text="@string/wheals_level0"
            android:background="@android:color/transparent"
            android:id="@+id/level0Wheals"
            android:onClick="selectWheal"/>
        <Button
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/uas_level_1"
            android:text="@string/wheals_level1"
            android:background="@android:color/transparent"
            android:id="@+id/level1Wheals"
            android:onClick="selectWheal"/>
        <Button
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/uas_level_2"
            android:text="@string/wheals_level2"
            android:background="@android:color/transparent"
            android:id="@+id/level2Wheals"
            android:onClick="selectWheal"/>
        <Button
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/uas_level_3"
            android:text="@string/wheals_level3"
            android:background="@android:color/transparent"
            android:id="@+id/level3Wheals"
            android:onClick="selectWheal"/>
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/whealsContainer"
        android:gravity="center"
        android:text="@string/wheals_level_info"
        android:textColor="@android:color/darker_gray"
        android:id="@+id/whealsInfo"
        android:autoText="false" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_below="@id/whealsInfo"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/itch_title"
        android:id="@+id/titleItch"
        android:textStyle="bold"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:id="@+id/itchContainer"
        android:layout_below="@id/titleItch">

        <Button
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/uas_level_0"
            android:text="@string/itch_level0"
            android:background="@android:color/transparent"
            android:id="@+id/level0Itch"
            android:onClick="selectItch"/>

        <Button
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/uas_level_1"
            android:text="@string/itch_level1"
            android:background="@android:color/transparent"
            android:id="@+id/level1Itch"
            android:onClick="selectItch"/>

        <Button
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/uas_level_2"
            android:text="@string/itch_level2"
            android:background="@android:color/transparent"
            android:id="@+id/level2Itch"
            android:onClick="selectItch"/>

        <Button
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/uas_level_3"
            android:text="@string/itch_level3"
            android:background="@android:color/transparent"
            android:id="@+id/level3Itch"
            android:onClick="selectItch"/>
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/itchContainer"
        android:gravity="center"
        android:text="@string/itch_level_info"
        android:textColor="@android:color/darker_gray"
        android:id="@+id/itchInfo"
        android:autoText="false" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:id="@+id/buttonContainer"
        android:layout_below="@id/itchInfo">

        <Button
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/note"
            android:onClick="addNote"
            android:background="@android:color/transparent"
            android:text="@string/add_note"
            android:id="@+id/addNote"
            style="@android:style/Widget.Button.Small" />

        <Button
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/photo"
            android:onClick="addPhoto"
            android:background="@android:color/transparent"
            android:text="@string/add_photo"
            android:id="@+id/addPhoto"
            style="@android:style/Widget.Button.Small" />

        <Button
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/angio"
            android:onClick="addAngio"
            android:background="@android:color/transparent"
            android:text="@string/log_angio"
            android:id="@+id/logAngio"
            style="@android:style/Widget.Button.Small" />

        <Button
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:drawableTop="@drawable/exit"
            android:onClick="back"
            android:background="@android:color/transparent"
            android:id="@+id/save_item"
            style="@android:style/Widget.Button.Small" />
    </LinearLayout>

</RelativeLayout>
