<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.aauc.urticariapp.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logoAAUC"
        android:clickable="true"
        android:onClick="logoAction"
        android:src="@drawable/logo_aauc"
        android:layout_marginBottom="5dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoAAUC"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:drawableTop="@drawable/log_uas"
        android:text="@string/uas_menu_item"
        android:id="@+id/uasButton"
        android:background="#ff00679f"
        android:onClick="uasAction"
        android:textColor="@android:color/white"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/uasButton"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:drawableTop="@drawable/calendar"
        android:text="@string/history_menu_item"
        android:id="@+id/historyButton"
        android:onClick="historyAction"
        android:background="#ff00679f"
        android:textColor="@android:color/white"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/historyButton"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:drawableTop="@drawable/urticaria_info"
        android:text="@string/urticaria_menu_item"
        android:id="@+id/urticariaButton"
        android:onClick="urticariaAction"
        android:background="#ff00679f"
        android:textColor="@android:color/white"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/urticariaButton"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:drawableTop="@drawable/join_us"
        android:text="@string/member_menu_item"
        android:id="@+id/memberButton"
        android:onClick="memberAction"
        android:background="#ff00679f"
        android:textColor="@android:color/white"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"/>

</RelativeLayout>
